{
    "name": "InputAction",
    "maps": [
        {
            "name": "Click",
            "id": "b435eb37-0116-41eb-828a-8655ecd046a6",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "Button",
                    "id": "3feb05be-9cc9-4429-97ab-9051b52e5afb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "db8fcfbb-a1f3-409f-98c0-bac26b28ad3c",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}